Still tinkering, configure realm and persistent cookie authentication module and class

--- a/platform.properties
+++ b/platform.properties
@@ -1,6 +1,6 @@
 
 VERSION=1.0
-PKG_BASE=/opt/package
+PKG_BASE=/opt/git/openam-tinker
 INSTALL_BASE=/opt/platform
 
 JAVA_HOME=/opt/java/jdk
@@ -101,9 +101,15 @@ OPENAM_DS_SUFFIX=dc=sso-config,dc=com
 OPENAM_DS_ADMIN=cn=admin
 OPENAM_DS_ADMIN_PASSWORD=superduper
 
-OPENAM_SITE=ssosite
-
 OPENAM_TEST_URL=https://${SERVER_FQDN}:${TOMCAT_HTTPS_PORT}/${OPENAM_DEPLOYMENT_URI}/isAlive.jsp
+OPENAM_TEST_URL_PRE_CONFIGURE=https://${SERVER_FQDN}:${TOMCAT_HTTPS_PORT}/${OPENAM_DEPLOYMENT_URI}/config/options.htm
+
+OPENAM_SITE=ssosite
+OPENAM_BASE_REALM=ssorealm
+
+#Persistent Cookie authentication module settings
+PCOOKIE_AUTH_MODULE=pcookie
+PCOOKIE_AUTH_CHAIN=pcookieChain
 
 #
 # Package parameters
