--- a/templates/openam-pcookie-batch-remove.TEMPLATE
+++ b/templates/openam-pcookie-batch-remove.TEMPLATE
@@ -5,5 +5,5 @@ delete-auth-cfgs --realm %OPENAM_BASE_REALM% --names %PCOOKIE_AUTH_CHAIN%
 delete-auth-instances --realm %OPENAM_BASE_REALM% --names %PCOOKIE_AUTH_MODULE%  
 
 #Remove post authentication class 
-remove-svc-attrs --servicename iPlanetAMAuthService --realm %OPENAM_BASE_REALM% --attributevalues iplanet-am-auth-post-login-process-class=org.forgerock.openam.authentication.modules.persistentcookie.PersistentCookieAuthModule
+remove-svc-attrs --servicename iPlanetAMAuthService --realm %OPENAM_BASE_REALM% --attributevalues iplanet-am-auth-post-login-process-class=%OPENAM_PCOOKIE_CLASS%
 
