Integrate settings for nighlty build install

--- a/platform.properties
+++ b/platform.properties
@@ -4,10 +4,15 @@ PKG_BASE=/opt/git/openam-tinker
 INSTALL_BASE=/opt/platform
 
 JAVA_HOME=/opt/java/jdk
-SERVER_FQDN=sso.yellowstone.com
-SERVER_COOKIE_DOMAIN=.yellowstone.com
+SERVER_FQDN=sso.redstone.com
+SERVER_COOKIE_DOMAIN=.redstone.com
 SYSTEM_USER=root
 SYSTEM_GROUP=root
+
+#
+# CA Parameters
+#
+CA_SSL_SERVER_CERT_DIR=${PKG_BASE}/ca/certs
 
 #
 # HTTPD (Apache web server)
@@ -56,7 +61,7 @@ OPENDJ_LDAP_PORT=1389
 OPENDJ_ADMIN_PORT=4444
 OPENDJ_ADMIN=cn=admin
 OPENDJ_ADMIN_PASSWORD=superduper
-OPENDJ_SUFFIX=dc=yellowstone,dc=com
+OPENDJ_SUFFIX=dc=stone,dc=com
 OPENDJ_USERDATA_LDIF=userdata.ldif
 
 LDAPSEARCH=${OPENDJ_BIN_DIR}/ldapsearch
@@ -66,16 +71,25 @@ LDAPSEARCH=${OPENDJ_BIN_DIR}/ldapsearch
 #
 OPENAM_BASE=${INSTALL_BASE}/openam
 OPENAM_SOFTWARE_EXTRACT_BASE=${OPENAM_BASE}/software_unzipped
-
-OPENAM_DOWNLOAD_URL=https://backstage.forgerock.com/downloads/enterprise/openam/openam12/12.0.0/OpenAM-12.0.0.zip
-OPENAM_ZIP=${PKG_BASE}/software/OpenAM-12.0.0.zip
-OPENAM_WAR=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/OpenAM-12.0.0.war
-
-OPENAM_CONFIGURATOR_ZIP=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/SSOConfiguratorTools-12.0.0.zip
 OPENAM_CONFIGURATOR_EXTRACT_BASE=${OPENAM_SOFTWARE_EXTRACT_BASE}/configurator_unzipped
-OPENAM_CONFIGURATOR_JAR=${OPENAM_CONFIGURATOR_EXTRACT_BASE}/openam-configurator-tool-12.0.0.jar
 
-OPENAM_SSOADM_ZIP=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/SSOAdminTools-12.0.0.zip
+#OpenAM 12.0
+#OPENAM_DOWNLOAD_URL=https://backstage.forgerock.com/downloads/enterprise/openam/openam12/12.0.0/OpenAM-12.0.0.zip
+#OPENAM_ZIP=${PKG_BASE}/software/OpenAM-12.0.0.zip
+#OPENAM_WAR=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/OpenAM-12.0.0.war
+#OPENAM_CONFIGURATOR_JAR=${OPENAM_CONFIGURATOR_EXTRACT_BASE}/openam-configurator-tool-12.0.0.jar
+#OPENAM_CONFIGURATOR_ZIP=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/SSOConfiguratorTools-12.0.0.zip
+#OPENAM_SSOADM_ZIP=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/SSOAdminTools-12.0.0.zip
+
+#OpenAM Nighly
+OPENAM_DOWNLOAD_URL=http://download.forgerock.org/downloads/openam/OpenAM-13.0.0-SNAPSHOT_nightly_20150727.zip
+OPENAM_ZIP=${PKG_BASE}/software/OpenAM-13.0.0-SNAPSHOT_nightly_20150727.zip
+OPENAM_WAR=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/OpenAM-13.0.0-SNAPSHOT.war
+OPENAM_CONFIGURATOR_ZIP=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/SSOConfiguratorTools-13.0.0-SNAPSHOT.zip
+OPENAM_CONFIGURATOR_JAR=${OPENAM_CONFIGURATOR_EXTRACT_BASE}/openam-configurator-tool-13.0.0-SNAPSHOT.jar
+#OPENAM_SSOADM_ZIP=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/SSOAdminTools-13.0.0-SNAPSHOT.zip
+OPENAM_SSOADM_ZIP=/opt/git/openam-tinker/software/openam/SSOAdminTools-12.0.0.zip
+
 OPENAM_SSOADM_BASE=${OPENAM_BASE}/tools
 OPENAM_SSOADM_DEBUG_BASE=${OPENAM_SSOADM_BASE}/debug
 OPENAM_SSOADM_LOG_BASE=${OPENAM_SSOADM_BASE}/log
