Add parameters for nightly vs last release; add parameters for OAUTH2 testing and custom deviceprint

--- a/platform.properties
+++ b/platform.properties
@@ -74,21 +74,21 @@ OPENAM_SOFTWARE_EXTRACT_BASE=${OPENAM_BASE}/software_unzipped
 OPENAM_CONFIGURATOR_EXTRACT_BASE=${OPENAM_SOFTWARE_EXTRACT_BASE}/configurator_unzipped
 
 #OpenAM 12.0
-#OPENAM_DOWNLOAD_URL=https://backstage.forgerock.com/downloads/enterprise/openam/openam12/12.0.0/OpenAM-12.0.0.zip
-#OPENAM_ZIP=${PKG_BASE}/software/OpenAM-12.0.0.zip
-#OPENAM_WAR=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/OpenAM-12.0.0.war
-#OPENAM_CONFIGURATOR_JAR=${OPENAM_CONFIGURATOR_EXTRACT_BASE}/openam-configurator-tool-12.0.0.jar
-#OPENAM_CONFIGURATOR_ZIP=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/SSOConfiguratorTools-12.0.0.zip
-#OPENAM_SSOADM_ZIP=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/SSOAdminTools-12.0.0.zip
+OPENAM_DOWNLOAD_URL=https://backstage.forgerock.com/downloads/enterprise/openam/openam12/12.0.0/OpenAM-12.0.0.zip
+OPENAM_ZIP=${PKG_BASE}/software/OpenAM-12.0.0.zip
+OPENAM_WAR=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/OpenAM-12.0.0.war
+OPENAM_CONFIGURATOR_JAR=${OPENAM_CONFIGURATOR_EXTRACT_BASE}/openam-configurator-tool-12.0.0.jar
+OPENAM_CONFIGURATOR_ZIP=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/SSOConfiguratorTools-12.0.0.zip
+OPENAM_SSOADM_ZIP=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/SSOAdminTools-12.0.0.zip
 
 #OpenAM Nighly
-OPENAM_DOWNLOAD_URL=http://download.forgerock.org/downloads/openam/OpenAM-13.0.0-SNAPSHOT_nightly_20150727.zip
-OPENAM_ZIP=${PKG_BASE}/software/OpenAM-13.0.0-SNAPSHOT_nightly_20150727.zip
-OPENAM_WAR=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/OpenAM-13.0.0-SNAPSHOT.war
-OPENAM_CONFIGURATOR_ZIP=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/SSOConfiguratorTools-13.0.0-SNAPSHOT.zip
-OPENAM_CONFIGURATOR_JAR=${OPENAM_CONFIGURATOR_EXTRACT_BASE}/openam-configurator-tool-13.0.0-SNAPSHOT.jar
+#OPENAM_DOWNLOAD_URL=http://download.forgerock.org/downloads/openam/OpenAM-13.0.0-SNAPSHOT_nightly_20150804.zip
+#OPENAM_ZIP=${PKG_BASE}/software/OpenAM-13.0.0-SNAPSHOT_nightly_20150804.zip
+#OPENAM_WAR=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/OpenAM-13.0.0-SNAPSHOT.war
+#OPENAM_CONFIGURATOR_ZIP=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/SSOConfiguratorTools-13.0.0-SNAPSHOT.zip
+#OPENAM_CONFIGURATOR_JAR=${OPENAM_CONFIGURATOR_EXTRACT_BASE}/openam-configurator-tool-13.0.0-SNAPSHOT.jar
 #OPENAM_SSOADM_ZIP=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/SSOAdminTools-13.0.0-SNAPSHOT.zip
-OPENAM_SSOADM_ZIP=/opt/git/openam-tinker/software/openam/SSOAdminTools-12.0.0.zip
+#OPENAM_SSOADM_ZIP=/opt/git/openam-tinker/software/openam/SSOAdminTools-12.0.0.zip
 
 OPENAM_SSOADM_BASE=${OPENAM_BASE}/tools
 OPENAM_SSOADM_DEBUG_BASE=${OPENAM_SSOADM_BASE}/debug
@@ -124,6 +124,15 @@ OPENAM_BASE_REALM=ssorealm
 #Persistent Cookie authentication module settings
 PCOOKIE_AUTH_MODULE=pcookie
 PCOOKIE_AUTH_CHAIN=pcookieChain
+
+#OAuth2
+OAUTH2_CLIENT_ID=o2client
+OAUTH2_CLIENT_PASSWORD=password
+
+#Custom device print
+OPENAM_CUSTOM_DEVICEPRINT_REALM=mobilerealm
+OPENAM_CUSTOM_DEVICEPRINT_CHAIN=mobilechain
+OPENAM_CUSTOM_DEVICEPRINT_MODULE=deviceprint
 
 #
 # Package parameters
