Add parameters for device id match and save realm and modules

--- a/platform.properties
+++ b/platform.properties
@@ -4,8 +4,8 @@ PKG_BASE=/opt/git/openam-tinker
 INSTALL_BASE=/opt/platform
 
 JAVA_HOME=/opt/java/jdk
-SERVER_FQDN=sso.redstone.com
-SERVER_COOKIE_DOMAIN=.redstone.com
+SERVER_FQDN=sso.yellowstone.com
+SERVER_COOKIE_DOMAIN=.yellowstone.com
 SYSTEM_USER=root
 SYSTEM_GROUP=root
 
@@ -128,6 +128,12 @@ PCOOKIE_AUTH_CHAIN=pcookieChain
 #OAuth2
 OAUTH2_CLIENT_ID=o2client
 OAUTH2_CLIENT_PASSWORD=password
+
+#OOTB device ID 
+OPENAM_DEVICEID_REALM=deviceidrealm
+OPENAM_DEVICEID_CHAIN=deviceidchain
+OPENAM_DEVICEID_MATCH_MODULE=deviceidmatch
+OPENAM_DEVICEID_SAVE_MODULE=deviceidsave
 
 #Custom device print
 OPENAM_CUSTOM_DEVICEPRINT_REALM=mobilerealm
