--- a/platform.properties
+++ b/platform.properties
@@ -2,6 +2,7 @@
 VERSION=1.0
 PKG_BASE=/opt/git/openam-tinker
 INSTALL_BASE=/opt/platform
+TMP_BASE=/opt/platform/tmp
 
 JAVA_HOME=/opt/java/jdk
 SERVER_FQDN=sso.yellowstone.com
