Use tmp dir for ssoadm batch files; fix the custom-pcookie module deployment

--- a/platform.properties
+++ b/platform.properties
@@ -39,6 +39,7 @@ TOMCAT_TEST_URL=http://${SERVER_FQDN}:${TOMCAT_HTTP_PORT}/
 
 TOMCAT_BIN_DIR=${TOMCAT_BASE}/apache-tomcat/bin
 TOMCAT_CONF_DIR=${TOMCAT_BASE}/apache-tomcat/conf
+TOMCAT_LIB_DIR=${TOMCAT_BASE}/apache-tomcat/lib
 TOMCAT_WEBAPPS_DIR=${TOMCAT_BASE}/apache-tomcat/webapps
 
 TOMCAT_SERVER_KEY_P12=${TOMCAT_BASE}/${SERVER_FQDN}-cert.p12
@@ -107,6 +108,8 @@ OPENAM_LDAPADMIN_PASSWORD=superduperwooper
 OPENAM_COOKIE_DOMAIN=${SERVER_COOKIE_DOMAIN}
 
 OPENAM_DEPLOYMENT_URI=sso
+OPENAM_WEBAPP_DIR=${TOMCAT_WEBAPPS_DIR}/${OPENAM_DEPLOYMENT_URI}
+OPENAM_WEBAPP_CLASSES_DIR=${OPENAM_WEBAPP_DIR}/WEB-INF/classes
 OPENAM_ENCRYPTION_KEY=SSOEncryptionKey
 
 OPENAM_DS_PORT=50389
