Combine client side of ootb deviceid chain and custom telephonenumber chain

--- a/templates/callback-telephonenumber-deviceprint.json.TEMPLATE
+++ b/templates/callback-telephonenumber-deviceprint.json.TEMPLATE
@@ -14,10 +14,8 @@
     },
     {
       "type":"TextOutputCallback",
-      "output":[
+      "input":[
         {
-          "name":"messageType",
-          "value":"4"
         }
       ]
     }
