Add authz parameters

--- a/platform.properties
+++ b/platform.properties
@@ -1,12 +1,12 @@
 
 VERSION=1.0
-PKG_BASE=/opt/git/openam-tinker
+PKG_BASE=/opt/git/openam-high5
 INSTALL_BASE=/opt/platform
 TMP_BASE=/opt/platform/tmp
 
 JAVA_HOME=/opt/java/jdk
-SERVER_FQDN=sso.yellowstone.com
-SERVER_COOKIE_DOMAIN=.yellowstone.com
+SERVER_FQDN=sso.redstone.com
+SERVER_COOKIE_DOMAIN=.redstone.com
 SYSTEM_USER=root
 SYSTEM_GROUP=root
 
@@ -76,21 +76,23 @@ OPENAM_SOFTWARE_EXTRACT_BASE=${OPENAM_BASE}/software_unzipped
 OPENAM_CONFIGURATOR_EXTRACT_BASE=${OPENAM_SOFTWARE_EXTRACT_BASE}/configurator_unzipped
 
 #OpenAM 12.0
-OPENAM_DOWNLOAD_URL=https://backstage.forgerock.com/downloads/enterprise/openam/openam12/12.0.0/OpenAM-12.0.0.zip
-OPENAM_ZIP=${PKG_BASE}/software/OpenAM-12.0.0.zip
-OPENAM_WAR=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/OpenAM-12.0.0.war
-OPENAM_CONFIGURATOR_JAR=${OPENAM_CONFIGURATOR_EXTRACT_BASE}/openam-configurator-tool-12.0.0.jar
-OPENAM_CONFIGURATOR_ZIP=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/SSOConfiguratorTools-12.0.0.zip
-OPENAM_SSOADM_ZIP=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/SSOAdminTools-12.0.0.zip
+#OPENAM_DOWNLOAD_URL=https://backstage.forgerock.com/downloads/enterprise/openam/openam12/12.0.0/OpenAM-12.0.0.zip
+#OPENAM_ZIP=${PKG_BASE}/software/OpenAM-12.0.0.zip
+#OPENAM_WAR=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/OpenAM-12.0.0.war
+#OPENAM_CONFIGURATOR_JAR=${OPENAM_CONFIGURATOR_EXTRACT_BASE}/openam-configurator-tool-12.0.0.jar
+#OPENAM_CONFIGURATOR_ZIP=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/SSOConfiguratorTools-12.0.0.zip
+#OPENAM_SSOADM_ZIP=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/SSOAdminTools-12.0.0.zip
 
-#OpenAM Nighly
-#OPENAM_DOWNLOAD_URL=http://download.forgerock.org/downloads/openam/OpenAM-13.0.0-SNAPSHOT_nightly_20150804.zip
-#OPENAM_ZIP=${PKG_BASE}/software/OpenAM-13.0.0-SNAPSHOT_nightly_20150804.zip
-#OPENAM_WAR=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/OpenAM-13.0.0-SNAPSHOT.war
-#OPENAM_CONFIGURATOR_ZIP=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/SSOConfiguratorTools-13.0.0-SNAPSHOT.zip
-#OPENAM_CONFIGURATOR_JAR=${OPENAM_CONFIGURATOR_EXTRACT_BASE}/openam-configurator-tool-13.0.0-SNAPSHOT.jar
-#OPENAM_SSOADM_ZIP=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/SSOAdminTools-13.0.0-SNAPSHOT.zip
-#OPENAM_SSOADM_ZIP=/opt/git/openam-tinker/software/openam/SSOAdminTools-12.0.0.zip
+#OpenAM Nightly
+OPENAM_DOWNLOAD_URL=http://download.forgerock.org/downloads/openam/OpenAM-13.0.0-SNAPSHOT_nightly_20151021.zip
+#OPENAM_DOWNLOAD_URL=http://download.forgerock.org/downloads/openam/OpenAM-13.0.0-SNAPSHOT.zip
+OPENAM_ZIP=${PKG_BASE}/software/OpenAM-13.0.0-SNAPSHOT_nightly_20151021.zip
+#OPENAM_ZIP=${PKG_BASE}/software/OpenAM-13.0.0-SNAPSHOT.zip
+OPENAM_WAR=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/OpenAM-13.0.0-SNAPSHOT.war
+OPENAM_CONFIGURATOR_ZIP=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/SSOConfiguratorTools-13.0.0-SNAPSHOT.zip
+OPENAM_CONFIGURATOR_JAR=${OPENAM_CONFIGURATOR_EXTRACT_BASE}/openam-configurator-tool-13.0.0-SNAPSHOT.jar
+OPENAM_SSOADM_ZIP=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/SSOAdminTools-13.0.0-SNAPSHOT.zip
+#OPENAM_SSOADM_ZIP=/opt/git/openam-high5/software/openam/SSOAdminTools-12.0.0.zip
 
 OPENAM_SSOADM_BASE=${OPENAM_BASE}/tools
 OPENAM_SSOADM_DEBUG_BASE=${OPENAM_SSOADM_BASE}/debug
@@ -118,10 +120,13 @@ OPENAM_DS_JMX_PORT=51689
 OPENAM_DS_SUFFIX=dc=sso-config,dc=com
 OPENAM_DS_ADMIN=cn=admin
 OPENAM_DS_ADMIN_PASSWORD=superduper
+OPENAM_DS_USERS_BASE_DN=ou=people,dc=sso-config,dc=com
+OPENAM_DS_GROUPS_BASE_DN=ou=groups,dc=sso-config,dc=com
 
 OPENAM_TEST_URL=https://${SERVER_FQDN}:${TOMCAT_HTTPS_PORT}/${OPENAM_DEPLOYMENT_URI}/isAlive.jsp
 OPENAM_TEST_URL_PRE_CONFIGURE=https://${SERVER_FQDN}:${TOMCAT_HTTPS_PORT}/${OPENAM_DEPLOYMENT_URI}/config/options.htm
 
+OPENAM_ROOT_REALM=/
 OPENAM_SITE=ssosite
 OPENAM_BASE_REALM=ssorealm
 
@@ -132,6 +137,8 @@ PCOOKIE_AUTH_CHAIN=pcookieChain
 #OAuth2
 OAUTH2_CLIENT_ID=o2client
 OAUTH2_CLIENT_PASSWORD=password
+OAUTH2_CLIENT_ID_TOKEN_SIGNED_RESPONSE_ALGORITHM=HS256
+OAUTH2_CLIENT_REDIRECTION_URI=https://sso.redstone.com:8443/openid/cb-basic.html
 
 #OOTB device ID 
 OPENAM_DEVICEID_REALM=deviceidrealm
@@ -145,6 +152,9 @@ OPENAM_CUSTOM_DEVICEPRINT_CHAIN=mobilechain
 OPENAM_CUSTOM_DEVICEPRINT_MATCH_MODULE=telephonenumberDevicePrintMatch
 OPENAM_CUSTOM_DEVICEPRINT_SAVE_MODULE=telephonenumberDevicePrintSave
 OPENAM_CUSTOM_DEVICEPRINT_SAMPLE_TELEPHONENUMBER=+33123456789123456789
+
+#Authorization
+OPENAM_AUTHZ_REALM=authzrealm
 
 #
 # Package parameters
