--- a/platform.properties
+++ b/platform.properties
@@ -155,6 +155,7 @@ OPENAM_CUSTOM_DEVICEPRINT_SAMPLE_TELEPHONENUMBER=+33123456789123456789
 
 #Authorization
 OPENAM_AUTHZ_REALM=authzrealm
+OPENAM_AUTHZ_RESOURCESET_SMARTHOME=SmartHome
 
 #
 # Package parameters
