Add Office365 parameters to properties files

--- a/platform.properties
+++ b/platform.properties
@@ -55,7 +55,8 @@ TOMCAT_KEYSTORE_STOREPASS=123456
 #
 OPENDJ_BASE=${INSTALL_BASE}/opendj
 OPENDJ_BIN_DIR=${OPENDJ_BASE}/bin
-OPENDJ_ZIP=${PKG_BASE}/software/OpenDJ-2.6.2.zip
+#OPENDJ_ZIP=${PKG_BASE}/software/OpenDJ-2.6.2.zip
+OPENDJ_ZIP=${PKG_BASE}/software/OpenDJ-3.0.0-20151112.zip
 OPENDJ_DOWNLOAD_URL=https://backstage.forgerock.com/downloads/maintenance/opendj/2.6.2/OpenDJ-2.6.2.zip
 
 OPENDJ_LDAP_PORT=1389
@@ -84,14 +85,12 @@ OPENAM_CONFIGURATOR_EXTRACT_BASE=${OPENAM_SOFTWARE_EXTRACT_BASE}/configurator_un
 #OPENAM_SSOADM_ZIP=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/SSOAdminTools-12.0.0.zip
 
 #OpenAM Nightly
-OPENAM_DOWNLOAD_URL=http://download.forgerock.org/downloads/openam/OpenAM-13.0.0-SNAPSHOT_nightly_20151021.zip
-#OPENAM_DOWNLOAD_URL=http://download.forgerock.org/downloads/openam/OpenAM-13.0.0-SNAPSHOT.zip
-OPENAM_ZIP=${PKG_BASE}/software/OpenAM-13.0.0-SNAPSHOT_nightly_20151021.zip
-#OPENAM_ZIP=${PKG_BASE}/software/OpenAM-13.0.0-SNAPSHOT.zip
-OPENAM_WAR=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/OpenAM-13.0.0-SNAPSHOT.war
-OPENAM_CONFIGURATOR_ZIP=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/SSOConfiguratorTools-13.0.0-SNAPSHOT.zip
-OPENAM_CONFIGURATOR_JAR=${OPENAM_CONFIGURATOR_EXTRACT_BASE}/openam-configurator-tool-13.0.0-SNAPSHOT.jar
-OPENAM_SSOADM_ZIP=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/SSOAdminTools-13.0.0-SNAPSHOT.zip
+OPENAM_DOWNLOAD_URL=http://download.forgerock.org/downloads/openam/OpenAM-13.0.0.zip
+OPENAM_ZIP=${PKG_BASE}/software/OpenAM-13.0.0.zip
+OPENAM_WAR=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/OpenAM-13.0.0.war
+OPENAM_CONFIGURATOR_ZIP=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/SSOConfiguratorTools-13.0.0.zip
+OPENAM_CONFIGURATOR_JAR=${OPENAM_CONFIGURATOR_EXTRACT_BASE}/openam-configurator-tool-13.0.0.jar
+OPENAM_SSOADM_ZIP=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/SSOAdminTools-13.0.0.zip
 #OPENAM_SSOADM_ZIP=/opt/git/openam-high5/software/openam/SSOAdminTools-12.0.0.zip
 
 OPENAM_SSOADM_BASE=${OPENAM_BASE}/tools
@@ -123,6 +122,7 @@ OPENAM_DS_ADMIN_PASSWORD=superduper
 OPENAM_DS_USERS_BASE_DN=ou=people,dc=sso-config,dc=com
 OPENAM_DS_GROUPS_BASE_DN=ou=groups,dc=sso-config,dc=com
 
+OPENAM_URL=https://${SERVER_FQDN}:${TOMCAT_HTTPS_PORT}/${OPENAM_DEPLOYMENT_URI}
 OPENAM_TEST_URL=https://${SERVER_FQDN}:${TOMCAT_HTTPS_PORT}/${OPENAM_DEPLOYMENT_URI}/isAlive.jsp
 OPENAM_TEST_URL_PRE_CONFIGURE=https://${SERVER_FQDN}:${TOMCAT_HTTPS_PORT}/${OPENAM_DEPLOYMENT_URI}/config/options.htm
 
@@ -140,6 +140,12 @@ OAUTH2_CLIENT_PASSWORD=password
 OAUTH2_CLIENT_ID_TOKEN_SIGNED_RESPONSE_ALGORITHM=HS256
 OAUTH2_CLIENT_REDIRECTION_URI=https://sso.redstone.com:8443/openid/cb-basic.html
 
+#OAuth Device Pairing / Device Flow
+OAUTH2_DEVICE_PAIRING_CLIENT_ID=settopbox
+OAUTH2_DEVICE_PAIRING_CLIENT_PASSWORD=password
+OAUTH2_DEVICE_PAIRING_CLIENT_ID_TOKEN_SIGNED_RESPONSE_ALGORITHM=RS256
+#OAUTH2_CLIENT_REDIRECTION_URI=https://sso.redstone.com:8443/openid/cb-basic.html
+
 #OOTB device ID 
 OPENAM_DEVICEID_REALM=deviceidrealm
 OPENAM_DEVICEID_CHAIN=deviceidchain
@@ -156,6 +162,28 @@ OPENAM_CUSTOM_DEVICEPRINT_SAMPLE_TELEPHONENUMBER=+33123456789123456789
 #Authorization
 OPENAM_AUTHZ_REALM=authzrealm
 OPENAM_AUTHZ_RESOURCESET_SMARTHOME=SmartHome
+
+#UMA
+OPENAM_UMA_REALM=umarealm
+OPENAM_UMA_RS_CLIENT_ID=uma_resource_server
+OPENAM_UMA_RS_CLIENT_PASSWORD=password
+OPENAM_UMA_CLIENT_ID=uma_client
+OPENAM_UMA_CLIENT_PASSWORD=password
+
+#Microsoft Interoperability
+OPENAM_MS_REALM=msinternal
+OPENAM_MS_COT=mscot
+OPENAM_MS_IDP_METAALIAS_SAML="${OPENAM_MS_REALM}/myIDP_SAML"
+OPENAM_MS_IDP_METAALIAS_WSFED="${OPENAM_MS_REALM}/myIDP_WSFED"
+OPENAM_MS_IDP_ENTITYID_SAML=${SERVER_FQDN}-saml
+OPENAM_MS_IDP_ENTITYID_WSFED=${SERVER_FQDN}-wsfed
+OPENAM_MS_IDP_META_SAML="${TMP_BASE}/${OPENAM_MS_IDP_ENTITYID_SAML}-meta.xml"
+OPENAM_MS_IDP_META_EXTENDED_SAML="${TMP_BASE}/${OPENAM_MS_IDP_ENTITYID_SAML}-saml2-extended.xml"
+OPENAM_MS_IDP_META_WSFED="${TMP_BASE}/${OPENAM_MS_IDP_ENTITYID_WSFED}-meta.xml"
+OPENAM_MS_IDP_META_EXTENDED_WSFED="${TMP_BASE}/${OPENAM_MS_IDP_ENTITYID_WSFED}-extended.xml"
+
+MS_DOMAIN=cloudical.com
+MS_SP_ENTITYID_SAML=urn:federation:MicrosoftOnline
 
 #
 # Package parameters
