--- a/platform.properties
+++ b/platform.properties
@@ -5,8 +5,8 @@ INSTALL_BASE=/opt/platform
 TMP_BASE=/opt/platform/tmp
 
 JAVA_HOME=/opt/java/jdk
-SERVER_FQDN=sso.redstone.com
-SERVER_COOKIE_DOMAIN=.redstone.com
+SERVER_FQDN=sso.yellowstone.com
+SERVER_COOKIE_DOMAIN=.yellowstone.com
 SYSTEM_USER=root
 SYSTEM_GROUP=root
 
@@ -77,20 +77,20 @@ OPENAM_SOFTWARE_EXTRACT_BASE=${OPENAM_BASE}/software_unzipped
 OPENAM_CONFIGURATOR_EXTRACT_BASE=${OPENAM_SOFTWARE_EXTRACT_BASE}/configurator_unzipped
 
 #OpenAM 12.0
-#OPENAM_DOWNLOAD_URL=https://backstage.forgerock.com/downloads/enterprise/openam/openam12/12.0.0/OpenAM-12.0.0.zip
-#OPENAM_ZIP=${PKG_BASE}/software/OpenAM-12.0.0.zip
-#OPENAM_WAR=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/OpenAM-12.0.0.war
-#OPENAM_CONFIGURATOR_JAR=${OPENAM_CONFIGURATOR_EXTRACT_BASE}/openam-configurator-tool-12.0.0.jar
-#OPENAM_CONFIGURATOR_ZIP=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/SSOConfiguratorTools-12.0.0.zip
-#OPENAM_SSOADM_ZIP=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/SSOAdminTools-12.0.0.zip
+OPENAM_DOWNLOAD_URL=https://backstage.forgerock.com/downloads/enterprise/openam/openam12/12.0.1/OpenAM-12.0.1.zip
+OPENAM_ZIP=${PKG_BASE}/software/OpenAM-12.0.1.zip
+OPENAM_WAR=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/OpenAM-12.0.1.war
+OPENAM_CONFIGURATOR_JAR=${OPENAM_CONFIGURATOR_EXTRACT_BASE}/openam-configurator-tool-12.0.1.jar
+OPENAM_CONFIGURATOR_ZIP=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/SSOConfiguratorTools-12.0.1.zip
+OPENAM_SSOADM_ZIP=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/SSOAdminTools-12.0.1.zip
 
 #OpenAM Nightly
-OPENAM_DOWNLOAD_URL=http://download.forgerock.org/downloads/openam/OpenAM-13.0.0.zip
-OPENAM_ZIP=${PKG_BASE}/software/OpenAM-13.0.0.zip
-OPENAM_WAR=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/OpenAM-13.0.0.war
-OPENAM_CONFIGURATOR_ZIP=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/SSOConfiguratorTools-13.0.0.zip
-OPENAM_CONFIGURATOR_JAR=${OPENAM_CONFIGURATOR_EXTRACT_BASE}/openam-configurator-tool-13.0.0.jar
-OPENAM_SSOADM_ZIP=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/SSOAdminTools-13.0.0.zip
+#OPENAM_DOWNLOAD_URL=http://download.forgerock.org/downloads/openam/OpenAM-13.0.0.zip
+#OPENAM_ZIP=${PKG_BASE}/software/OpenAM-13.0.0.zip
+#OPENAM_WAR=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/OpenAM-13.0.0.war
+#OPENAM_CONFIGURATOR_ZIP=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/SSOConfiguratorTools-13.0.0.zip
+#OPENAM_CONFIGURATOR_JAR=${OPENAM_CONFIGURATOR_EXTRACT_BASE}/openam-configurator-tool-13.0.0.jar
+#OPENAM_SSOADM_ZIP=${OPENAM_SOFTWARE_EXTRACT_BASE}/openam/SSOAdminTools-13.0.0.zip
 #OPENAM_SSOADM_ZIP=/opt/git/openam-high5/software/openam/SSOAdminTools-12.0.0.zip
 
 OPENAM_SSOADM_BASE=${OPENAM_BASE}/tools
@@ -138,13 +138,13 @@ PCOOKIE_AUTH_CHAIN=pcookieChain
 OAUTH2_CLIENT_ID=o2client
 OAUTH2_CLIENT_PASSWORD=password
 OAUTH2_CLIENT_ID_TOKEN_SIGNED_RESPONSE_ALGORITHM=HS256
-OAUTH2_CLIENT_REDIRECTION_URI=https://sso.redstone.com:8443/openid/cb-basic.html
+OAUTH2_CLIENT_REDIRECTION_URI=https://yellowstone.com:8443/openid/cb-basic.html
 
 #OAuth Device Pairing / Device Flow
 OAUTH2_DEVICE_PAIRING_CLIENT_ID=settopbox
 OAUTH2_DEVICE_PAIRING_CLIENT_PASSWORD=password
 OAUTH2_DEVICE_PAIRING_CLIENT_ID_TOKEN_SIGNED_RESPONSE_ALGORITHM=RS256
-#OAUTH2_CLIENT_REDIRECTION_URI=https://sso.redstone.com:8443/openid/cb-basic.html
+#OAUTH2_CLIENT_REDIRECTION_URI=https://sso.yellowstone.com:8443/openid/cb-basic.html
 
 #OOTB device ID 
 OPENAM_DEVICEID_REALM=deviceidrealm
@@ -173,12 +173,12 @@ OPENAM_UMA_CLIENT_PASSWORD=password
 #Microsoft Interoperability
 OPENAM_MS_REALM=msinternal
 OPENAM_MS_COT=mscot
-OPENAM_MS_IDP_METAALIAS_SAML="${OPENAM_MS_REALM}/myIDP_SAML"
-OPENAM_MS_IDP_METAALIAS_WSFED="${OPENAM_MS_REALM}/myIDP_WSFED"
 OPENAM_MS_IDP_ENTITYID_SAML=${SERVER_FQDN}-saml
 OPENAM_MS_IDP_ENTITYID_WSFED=${SERVER_FQDN}-wsfed
+OPENAM_MS_IDP_METAALIAS_SAML="${OPENAM_MS_REALM}/${OPENAM_MS_IDP_ENTITYID_SAML}"
+OPENAM_MS_IDP_METAALIAS_WSFED="${OPENAM_MS_REALM}/${OPENAM_MS_IDP_ENTITYID_WSFED}"
 OPENAM_MS_IDP_META_SAML="${TMP_BASE}/${OPENAM_MS_IDP_ENTITYID_SAML}-meta.xml"
-OPENAM_MS_IDP_META_EXTENDED_SAML="${TMP_BASE}/${OPENAM_MS_IDP_ENTITYID_SAML}-saml2-extended.xml"
+OPENAM_MS_IDP_META_EXTENDED_SAML="${TMP_BASE}/${OPENAM_MS_IDP_ENTITYID_SAML}-extended.xml"
 OPENAM_MS_IDP_META_WSFED="${TMP_BASE}/${OPENAM_MS_IDP_ENTITYID_WSFED}-meta.xml"
 OPENAM_MS_IDP_META_EXTENDED_WSFED="${TMP_BASE}/${OPENAM_MS_IDP_ENTITYID_WSFED}-extended.xml"
 
